--- a/inputfile2.in
+++ b/inputfile2.in
@@ -2,7 +2,7 @@
 name catio3
 
 # Input file for general information about the crystal 
-genstruc general_structure.abi 
+genstruc general_structure.abi
 
 # Number of datapoints
 num_datapoints 9
@@ -18,4 +18,12 @@ max 0.7
 
 # Time limit for jobs
 time_limit 23:59:59
+
+# How many unstable phonons are calcuated from most to least unstable (default is all)
+num_phon 2
+
+# What phonons to calculate  
+calc_phon 
+2
+1
 
